[package]
name = "telltales"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
reqwest-oauth1 = { version = "0.3", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_yaml = "0.9"
thiserror = "1.0"
url = "2.5"
